# bot_delo

./: .dockerignore  .env  .flake8  .gitignore  Dockerfile  Jenkinsfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_alembic_init.py  0002_add_users_and_referrals.py  0003_add_constraints.py  0004_add_consultation_table.py  0005_add_timestamp.py  0006_switch_tg_id_on_str.py
app/: client.py
app/core/: database.py  settings.py
app/core/models/: __init__.py  consultation.py  refer.py  user.py
app/core/repositories/: consultation_repo.py  refer_repo.py  user_repo.py
app/core/services/: consultation_service.py  refer_service.py  user_service.py
app/filters/: back_menu.py  user_contact.py
app/handlers/: about.py  back_menu.py  calculate_remont.py  construction.py  consultation.py  contacts.py  partner_program.py  ref_program.py  user_contact.py
app/keyboards/: keyboard_calculate_remont.py  keyboard_consultation.py  keyboard_only_start.py  keyboard_referal_program.py  keyboard_return_phone.py  keyboard_start.py
app/states/: order_remont.py
app/texts/: hello_text.py  partner_program_text.py  ref_text.py  remont_start.py
cicd/python-lintings/: Dockerfile
